--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "gulpfile.js",
   "scripts": {
     "dev": "gulp dev",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "scss": "node-sass style.scss style.css"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +16,7 @@
     "gulp-sass": "^4.0.2"
   },
   "dependencies": {
-    "gulp": "^3.9.0"
+    "gulp": "^3.9.0",
+    "node-sass": "^4.12.0"
   }
 }
